2009-05-23 Suzana Matos <suzana.mato@gmail.com>
* boradois.xmi :
	- fixed
* public/stylesheets/scaffold :
	- added <h2> (to use in menu)
* app/views/shared/_menu_admin.html.erb :
	- changed the menu view
* db/createTables :
	- created all others tables

2009-05-05 Suzana Matos <suzana.mato@gmail.com>
* models/reserva : fixed.
* controllers : changed the order of the lists.
* views :
	- hospedes : changed the order of Endereco and Nascimento. 
	- reservas : changed the order of the list of Hospedes and
	TiposApartamentos
	- apartamentos : changed the order of the list of TiposApartamentos

2009-05-05 Suzana Matos <suzana.mato@gmail.com>
* Fixed table width

2009-05-05 Suzana Matos <suzana.mato@gmail.com>
* Tranlated months' names 

2009-05-05 Iuri Fernandes <iurifq@gmail.com>
* Fixed bug in new reserva

2009-05-05 Iuri Fernandes <iurifq@gmail.com>
* Created missing validations.

2009-05-05 Iuri Fernandes <iurifq@gmail.com>
* Commented okToReserve method

2009-05-05 Suzana Matos <suzana.mato@gmail.com>
* models :
	- reserva : tried to fix validation of reserva... (but it isn't working...)
	- apartamento : included some validations
* views : 
	- admin : translated words
	- hospedes, tipos_apartamentos, servicos, apartamentos : fixed date and some labels
	- reservas : fixed dates, labels and tipo apartamento(edit)

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Made validation method okToReserve to be used to validade if there's
available apartments.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Finished creation of CRUD reserva.

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* Fixed combobox

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* Fixed apartamento
	- show the status
	- show the type
	- combobox of the type

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Added field in "reserva" to select the "hospede" by name.

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* models : 
	- reservas/apartamentos: included belongs_to function (FK)
* views : 