@@ -1,0 +1,20 @@
+<h1>Editando um tipo de pagamento</h1>
+
+<% form_for(@tipos_pagamento) do |f| %>
+  <%= f.error_messages %>
+
+  <p>
+    <%= f.label :nome %><br />
+    <%= f.text_field :nome %>
+  </p>
+  <p>
+    <%= f.label :descricao, 'Descrição' %><br />
+    <%= f.text_area :descricao %>
+  </p>
+  <p>
+    <%= f.submit 'Atualizar' %>
+  </p>
+<% end %>
+
+<%= link_to 'Exibir', @tipos_pagamento %> |
+<%= link_to 'Voltar', tipos_pagamentos_path %>
