@@ -1,0 +1,25 @@
+<h1>Listando os tipos de pagamentos</h1>
+
+<table>
+  <tr>
+    <th>Nome</th>
+    <th>Descrição</th>
+    <th colspan="3">Opções</th>
+  </tr>
+
+<% par_impar = 0
+	for tipos_pagamento in @tipos_pagamentos
+     		par_impar = 1 - par_impar %>
+  <tr class="listLine<%= par_impar %>">
+    <td><%=h tipos_pagamento.nome %></td>
+    <td><%=h tipos_pagamento.descricao %></td>
+    <td width="5%"><%= link_to 'Exibir', tipos_pagamento %></td>
+    <td width="5%"><%= link_to 'Editar', edit_tipos_pagamento_path(tipos_pagamento) %></td>
+    <td width="5%"><%= link_to 'Remover', tipos_pagamento, :confirm => 'Você tem certeza?', :method => :delete %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<%= link_to 'Inserir novo tipo de pagamento', new_tipos_pagamento_path %>
